2008-03-18  Ben Abbott <bpabbott@mac.com>

	* specfun/beta.m: Fix for negative inputs.

2008-03-18  Michael D. Godfrey  <godfrey@isl.stanford.edu>

	* plot/__go_draw_axes__.m: Use correct symbol codes.

2008-03-14  Kai Habel  <kai.habel@gmx.de>

        * plot/__go_draw_axes__.m: Expicitly set gnuplot user
        style to default to avoid wrong mesh color in some cases.

2008-03-12  David Bateman  <dbateman@free.fr>

	* geometry/griddata3.m: Use griddatan and not griddata
	internally. Return vi and not yi. Add test code.

2008-03-11  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Use get to access hidden properties.
	Use strcmpi when comparing string properties.

	* io/csread.m, io/csvwrite.m, io/dlmwrite.m: Style fixes.

2008-03-11  Kai Habel  <kai.habel@gmx.de>

        * plot/__go_draw_axes__.m: Plot surfaces in front of axes.
        Allow plotting of uniform colored mesh plots with and
        w/o hidden line removal.

2008-03-11  David Bateman  <dbateman@free.fr>

	* io/dlmwrite.m, io/csvread.m, io/csvwrite.m: Files ported from
	octave-forge.
	* io/Makefile.in (SOURCES): Add them here.

2008-03-07  John W. Eaton  <jwe@octave.org>

	* plot/contourf.m: Set axes layer property to "top".

	* plot/__go_draw_axes__.m: Handle tickdir property.

2008-03-06  John W. Eaton  <jwe@octave.org>

	* plot/hist.m: Avoid temporaries.
	Allow matrix arguments when number of bins > 30.
	From Robert S. Mahurin <rob@utk.edu>.

	* plot/ChangeLog: Handle axes linewidth property.

	* plot/__go_draw_axes__.m: Adjust markersize by a factor of 1/6.

	* general/interpn.m: New test.

2008-03-05  Ben Abbott  <bpabbott@mac.com>

	* polynomial/roots.m: Catch Infs and/or NaNs.

2008-03-05  Sebastien Loisel  <loisel@temple.edu>

	* polynomial/roots.m: Apply a scaling factor to the removal of the
	leading zeros.

2008-03-04  John W. Eaton  <jwe@octave.org>

	* plot/print.m: Fix oops in applying last change.

2008-03-04  Bill Denney  <bill@denney.ws>
